[package]
name = "schedule_queue"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
futures-util = "0.3"
parking_lot = "0.11"
priority-queue = "1.2"
tokio = { version = "1.15", features = ["macros", "sync", "time"] }
